[gd_scene load_steps=9 format=2]

[ext_resource path="res://base_texture.png" type="Texture" id=1]
[ext_resource path="res://scripts/map/dead_zone.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 20, 20, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 50, 0, 50 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 100, 100, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 100, 100 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 100, 1, 100 )

[node name="Map_1" type="Spatial"]
script = ExtResource( 2 )

[node name="floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="floor"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="floor"]
shape = SubResource( 3 )

[node name="dead_front" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100 )

[node name="CollisionShape" type="CollisionShape" parent="dead_front"]
shape = SubResource( 4 )

[node name="dead_back" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100 )

[node name="CollisionShape" type="CollisionShape" parent="dead_back"]
shape = SubResource( 4 )

[node name="dead_right" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="dead_right"]
shape = SubResource( 5 )

[node name="dead_left" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -100, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="dead_left"]
shape = SubResource( 5 )

[node name="dead_bottom" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0 )

[node name="CollisionShape" type="CollisionShape" parent="dead_bottom"]
shape = SubResource( 6 )

[node name="dead_top" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0 )

[node name="CollisionShape" type="CollisionShape" parent="dead_top"]
shape = SubResource( 6 )
